src/main/java/com/example/domain/model/error/CriticalMigrationError.java
package com.example.domain.model.error;

public class CriticalMigrationError extends MigrationError {

    public CriticalMigrationError(String message) {
        super(message);
    }

    @Override
    public Type getType() {
        return Type.CRITICAL;
    }
}